# pdmers

./: .gitignore  Cargo.toml  README.cratesio.md  README.md
images/: logo.graphite
src/: main.rs
src/cli/: app.rs  app_output.rs  mod.rs  styles.rs
src/cli/subcommands/: merge.rs  mod.rs
src/runnable_items/: merge.rs  mod.rs
src/runnable_items/merge/: depth.rs  errors.rs  mod.rs  order_mode.rs  run_success.rs  tests.rs
src/utils/: checkable.rs  cli_tips.rs  mod.rs  path.rs  printable.rs  runnable_item.rs
