[package]
name = "pdmers"
version = "1.0.0"
authors = ["nasccped <pdbt.contact@gmail.com>"]
description = "A rust tool for PDF merging"
repository = "https://github.com/nasccped/pdmers"
license = "MIT"
readme = "README.cratesio.md"
keywords = ["pdf", "cli", "merge", "documents"]
categories = ["command-line-utilities"]
exclude = [
  "target/",
  ".git/",
  ".gitignore",
  "README.md",
  "**/*.pdf",
  "images/light-logo.svg",
  "images/dark-logo.svg",
]
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
lopdf = "0.38.0"
